package 结构型设计模式.装饰器模式.demo;

/**
 * @ProjectName: 设计模式
 * @ClassName: Component
 * @Auther: wczy
 * @Date: 2020-12-07 23:26
 * @Version 1.0
 **/
public abstract class Component {
    //示例方法
    public abstract void operation();
}
